--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -993,11 +993,12 @@ a-plane {
         transform: translateX(-50%);
         width: auto;
         padding: 10px 20px;
-        border-radius: 5px;
+        border-radius: 50px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         background-color: #FAC301;
         color: white;
         font-size: 16px;
+        font: bold;
         border: none;
         cursor: pointer;
         z-index: 1000;
